# active-vision

./: README.md
av_bringup/: CMakeLists.txt  README.md  package.xml
av_bringup/config/: README.md  parameters.yaml
av_bringup/data/: README.md  octree_tomato_4.bt
av_bringup/launch/: active_vision_nbv_planning_pipeline.launch.py  active_vision_predefined_planning_pipeline.launch.py  octomap_normal.launch.py  octomap_segmentation_color_filter.launch.py  octomap_segmentation_lang_sam.launch.py  octomap_segmentation_yolo_world.launch.py  realsense.launch.py
av_bringup/rviz/: active_vision_predefined_planning_pipeline.rviz  octomap_normal.rviz  octomap_normal_ignition.rviz  octomap_normal_realsense.rviz  octomap_segmentation_color_filter.rviz  octomap_segmentation_color_filter_ignition.rviz  octomap_segmentation_color_filter_realsense.rviz  octomap_segmentation_lang_sam.rviz  octomap_segmentation_lang_sam_ignition.rviz  octomap_segmentation_lang_sam_realsense.rviz  octomap_segmentation_yolo_world.rviz  octomap_segmentation_yolo_world_ignition.rviz  octomap_segmentation_yolo_world_realsense.rviz
av_gazebo_ignition/: CMakeLists.txt  README.md  package.xml
av_gazebo_ignition/config/: bridge_description.yaml
av_gazebo_ignition/models/tomato_0_few_fruits/: model.sdf
av_gazebo_ignition/models/tomato_0_few_fruits_truth/: model.config
av_gazebo_ignition/models/tomato_obfuscated/: model.config  model.sdf
av_gazebo_ignition/models/tomato_obfuscated_small_green/: model.config
av_gazebo_ignition/models/tomato_obfuscated_truth/: model.config  model.sdf
av_gazebo_ignition/worlds/: tomato_field.sdf  tomato_field_truth.sdf
av_interfaces/: CMakeLists.txt  README.md  package.xml
av_interfaces/msg/: ImageArray.msg
av_interfaces/srv/: LANGSAMSegmentation.srv
av_octomap/: CMakeLists.txt  README.md  package.xml
av_octomap/include/av_octomap/: extended_octomap_data.hpp  extended_octomap_server.hpp
av_octomap/launch/: extended_octomap_creation.launch.py
av_octomap/src/: extended_octomap_data.cpp  extended_octomap_server.cpp  main_extended_octomap_server.cpp
av_planning/: CMakeLists.txt  README.md  package.xml
av_planning/config/: nbv_initial_position.yaml
av_planning/include/av_planning/: active_vision_nbv_planning_pipeline.hpp  active_vision_pipeline.hpp  active_vision_predefined_planning_pipeline.hpp
av_planning/launch/: nbv_planning_pipeline.launch.py  predefined_planning_pipeline.launch.py
av_planning/src/: main_nbv_planning_pipeline.cpp  main_predefined_planning_pipeline.cpp  nbv_planning_pipeline.cpp  predefined_planning_pipeline.cpp
av_pointcloud/: CMakeLists.txt  README.md  package.xml
av_pointcloud/include/av_pointcloud/: segmented_pointcloud.hpp
av_pointcloud/launch/: pointcloud_creation.launch.py  segmented_pointcloud_creation.launch.py
av_pointcloud/src/: full_pointcloud.cpp  main_full_pointcloud.cpp  main_segmented_pointcloud.cpp  segmented_pointcloud.cpp
av_segmentation_yolo_world/: README.md  package.xml  setup.cfg  setup.py
av_segmentation_yolo_world/av_segmentation_yolo_world/: yolo_world.py  yolo_world_server.py  yolo_world_test.py
av_segmentation_yolo_world/launch/: yolo_world.launch.py  yolo_world_server.launch.py  yolo_world_test.launch.py
fruit_picking_octomap/: CMakeLists.txt  package.xml
fruit_picking_octomap/include/fruit_picking_octomap/: conversions.h  extended_octomap_data.hpp  extended_octomap_server.hpp  octomap_server.hpp
fruit_picking_octomap/launch/: extended_octomap_creation.launch.py  octomap_creation.launch.py
fruit_picking_octomap/src/: conversions.cpp  extended_octomap_data.cpp  extended_octomap_server.cpp  main_extended_octomap_server.cpp  octomap_server.cpp  transforms.cpp
fruit_picking_pointcloud/: CMakeLists.txt  package.xml
fruit_picking_pointcloud/include/fruit_picking_pointcloud/: full_pointcloud.hpp  reduced_pointcloud.hpp  segmented_pointcloud.hpp
fruit_picking_pointcloud/launch/: pointcloud_creation.launch.py  reduced_pointcloud_creation.launch.py  segmented_pointcloud_creation.launch.py
fruit_picking_pointcloud/src/: full_pointcloud.cpp  main_full_pointcloud.cpp  main_pointcloud.cpp  main_segmented_pointcloud.cpp  reduced_pointcloud.cpp  segmented_pointcloud.cpp
igus_rebel_description/: CMakeLists.txt  package.xml
igus_rebel_description/include/igus_rebel_description/: joint_position_controller.hpp  joint_state_publisher.hpp  joint_trajectory_controller.hpp
igus_rebel_description/launch/: simulation_env.launch.py  simulation_env_ignition.launch.py
igus_rebel_description/rviz/: config.rviz
igus_rebel_description/src/: joint_controller_main.cpp  joint_position_controller.cpp  joint_state_publisher.cpp  joint_state_publisher_main.cpp  joint_trajectory_controller.cpp
igus_rebel_description/urdf/: grippers.xacro  igus_rebel.control.xacro  igus_rebel.description.xacro  igus_rebel.gazebo.xacro  igus_rebel.urdf.xacro  igus_rebel_ros2.description.xacro  igus_rebel_ros2.urdf.xacro
igus_rebel_description/urdf/camera/: oak_d_pro.xacro
igus_rebel_gazebo_ignition/: CMakeLists.txt  README.md  package.xml
igus_rebel_gazebo_ignition/config/: bridge_description.yaml  bridge_moveit.yaml  initial_joint_positions.yaml
igus_rebel_gazebo_ignition/include/igus_rebel_gazebo_ignition/: joint_position_controller.hpp  joint_state_publisher.hpp  (+1 more)
igus_rebel_gazebo_ignition/launch/: ignition.launch.py
igus_rebel_gazebo_ignition/src/: joint_controller_main.cpp  joint_position_controller.cpp  joint_state_publisher.cpp  joint_state_publisher_main.cpp  joint_trajectory_controller.cpp
igus_rebel_gazebo_ignition/urdf/: plugins.xacro
igus_rebel_moveit_config/: CMakeLists.txt  README.md
igus_rebel_moveit_config/config/: bridge.yaml  igus_rebel.srdf.xacro  kinematics.yaml
igus_rebel_moveit_config/launch/: demo.launch.py  ignition.launch.py  moveit_controller.launch.py
igus_rebel_moveit_config/rviz/: moveit.rviz
igus_rebel_moveit_config/src/: joint_controller_main.cpp  joint_position_controller.cpp  joint_state_publisher.cpp  joint_state_publisher_main.cpp  joint_trajectory_controller.cpp
(+275 files in other folders)
