<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>av_pointcloud</name>
  <version>1.0.1</version>
  <description>The av_pointcloud package is responsible for processing and managing point cloud data for the active vision system. This package includes source code, launch files, and configuration files required for creating and handling both full and segmented point clouds.</description>
  <maintainer email="michelelagreca.work@gmail.com">Michele Carlo La Greca</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>av_interfaces</depend>

  <build_export_depend>ament_cmake</build_export_depend>
  <exec_depend>ament_cmake</exec_depend> l

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
